[project]
name = "bot_hosting_wrapper"
version = "1.0.3"
authors = [
  { name="Vortex", email="vrtx.supp0rt@gmail.com" },
]
description = "A simple API Wrapper for bot-hosting.net"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
homepage = "https://github.com/vortexsys/bot-hosting-wrapper"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
colorama = "^0.4.4"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"