[project]
name = "bot_hosting_wrapper"
version = "1.2.1"
authors = [
  { name="Bubblegum", email="None" },
]
description = "A simple API Wrapper for bot-hosting.net"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.26.0",
    "colorama>=0.4.4",
]

[project.urls]
Repository = "https://github.com/suspectedesp/bot-hosting-wrapper/"
Bot-Hosting = "https://bot-hosting.net/"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"