[project]
name = "bot_hosting_wrapper"
version = "1.3"
authors = [
  { name="Bubblegum" },
]
description = "A simple API Wrapper for bot-hosting.net"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: The Unlicense",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.26.0",
    "colorama>=0.4.4",
    "aiohttp>=3.10.5",
]

[project.urls]
Github Repository = "https://github.com/suspectedesp/bot-hosting-wrapper/"
Bot-Hosting Website = "https://bot-hosting.net/"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"